# qhack

./: .gitignore  README.md  deploy.md
backend/: .gitignore  main.py  recipe_extractor.py  requirement.txt  temp_audio_1745436121.mp3.part  transcription
backend/recipes/: ingredients_DkWYQgCTNkU.json  ingredients_L0oKJpGI4Yg.json  ingredients_QQfaL3Jjdew.json  ingredients_r8XuBXT_SlA.json  ingredients_t5DNoGO26lM.json  recipe_DkWYQgCTNkU.json  recipe_L0oKJpGI4Yg.json  recipe_QQfaL3Jjdew.json  recipe_r8XuBXT_SlA.json
docs/: notes_sebastian.md
frontend/: .env.sample  deploy.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/.well-known/: assetlinks.json
frontend/src/: App.tsx  tauri.d.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json  youtube-share.md
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs
frontend/src/components/: Footer.tsx  Header.tsx  IngredientCard.tsx  IngredientsList.tsx  RecipeHeader.tsx  d-choices.tsx  d-co2-indicator.tsx  d-comparison.tsx  d-header.tsx  d-loading.tsx  d-stats-header.tsx  d-supporter.tsx  d-tab.tsx
frontend/src/components/dashboard/: d-button.tsx  d-nutritional-section.tsx  d-recipe-item.tsx  d-smart-shopping-section.tsx  d-stat-card.tsx  (+3 more)
frontend/src/lib/: supabaseClient.ts
frontend/src/pages/: Cart.tsx  Cooking.tsx  Dashboard.tsx  Dashboard2.tsx  Dashboard3.tsx  Favorites.tsx  Index.tsx  Recipe.tsx  Search.tsx  Test.tsx
recipes/: recipe_t5DNoGO26lM.json
supabase/: setup.sql
